[tool.poetry]
name = "rwgps-sync"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "rwgps_sync"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
