[project]
name = "rwgps-sync"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.32.2",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "types-requests>=2.32.4.20250611",
]
